Finished footer, added contact icons and made small detail changes

--- a/index.html
+++ b/index.html
@@ -51,17 +51,47 @@
       <div id="stats">
         <!-- pokemon stats-->
         <h3 id="statsHeader">Pokemon Stats</h3>
-        <p id="hp"></p>
-        <p id="attack"></p>
-        <p id="defense"></p>
-        <p id="specialAttack"></p>
-        <p id="specialDefence"></p>
-        <p id="speed"></p>
+        <p id="Hp"></p>
+        <p id="Attack"></p>
+        <p id="Defense"></p>
+        <p id="SpecialAttack"></p>
+        <p id="SpecialDefence"></p>
+        <p id="Speed"></p>
+        <p id="Total"></p>
       </div>
     </section>
 
+    <!-- footer, contains contact icons -->
     <footer>
-      <p>Created By Michael Zhao</p>
+      <div id="contactIcons">
+        <p>
+          Pichu's Pokedex by Michael Zhao is not affiliated with "The Pokémon
+          Company" <br />
+          and does not own or claim any rights to any Nintendo trademark or the
+          Pokémon trademark, <br />and all references to such are used for
+          commentary and informational purposes only.
+        </p>
+        <p>
+          <a
+            href="https://www.linkedin.com/in/michael-zhao-82a2ab245/"
+            target="_blank"
+          >
+            <img src="images/linkdinIcon.png" alt="Linkdin Icon" />
+          </a>
+        </p>
+
+        <p>
+          <a href="https://github.com/MichaelZhao45" target="_blank">
+            <img src="images/githubIcon.png" alt="Github Icon" />
+          </a>
+        </p>
+
+        <p>
+          <a href="mailto:Michaelzhao4567@gmail.com">
+            <img src="images/emailIcon.png" alt="Email Icon" />
+          </a>
+        </p>
+      </div>
     </footer>
 
     <script src="./script.js"></script>
